Fixing title size on mobile devices

--- a/style.css
+++ b/style.css
@@ -157,6 +157,7 @@ body {
         
         header {
             width: 95%;
+            font-size: 0.8rem;
         }
     }
 }
